@@ -1,3 +1,10 @@
+2009-01-15  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
+
+	Patch from Laszlo Pere:
+	* matchbox/core/mb-wm-client-base.c (is_window_mapped): New.
+	Ensure that the window is really mapped before increasing skip_unmaps
+	counter. Fixes: NB#97342
+
 2009-01-14  Gordon Williams  <gordon.williams@collabora.co.uk>
 
 	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c:
